--- a/AppointmentService-prod.yml
+++ b/AppointmentService-prod.yml
@@ -1,14 +1,14 @@
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://13.221.235.248:8761/eureka
 
 spring:
   application:
     name: AppointmentService
 
   datasource:
-    url: jdbc:mysql://localhost:3306/prod_doc_appoinment_appointment_service?useSSL=false&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://online-doc-appnt-db.c1eeu604q8hf.us-east-1.rds.amazonaws.com:3306/prod_doc_appoinment_appointment_service?useSSL=false&allowPublicKeyRetrieval=true
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
