--- a/AuthService-prod.yml
+++ b/AuthService-prod.yml
@@ -1,3 +1,6 @@
+jwt:
+  secret: my-secret-key-for-jwt-signing-123456789
+
 eureka:
   client:
     service-url:
@@ -5,25 +8,14 @@ eureka:
 
 spring:
   application:
-    name: UserService
+    name: AuthService
   profiles:
     active: default
   config:
     import: "optional:configserver:http://13.221.235.248:8888"
 
-management:
-  tracing:
-    sampling:
-      probability: 1.0  # Always sample for logs
-
-logging:
-  pattern:
-    level: "%5p [${spring.application.name},%X{traceId:-},%X{spanId:-}]"
-
-
-
   datasource:
-    url: jdbc:mysql://online-doc-appnt-db.c1eeu604q8hf.us-east-1.rds.amazonaws.com:3306/prod_doc_appointment_user_service?useSSL=false&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://localhost:3306/prod_doc_appointment_user_service?useSSL=false&allowPublicKeyRetrieval=true
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -46,3 +38,7 @@ logging:
 server:
   port: 9090
 
+
+logging:
+  file:
+    path: spring.log
