--- a/AuthService-prod.yml
+++ b/AuthService-prod.yml
@@ -15,9 +15,9 @@ spring:
     import: "optional:configserver:http://13.221.235.248:8888"
 
   datasource:
-    url: jdbc:mysql://localhost:3306/prod_doc_appointment_user_service?useSSL=false&allowPublicKeyRetrieval=true
-    username: root
-    password: root
+    url: jdbc:mysql://online-doc-appnt-db.c1eeu604q8hf.us-east-1.rds.amazonaws.com:3306/prod_doc_appointment_user_service?useSSL=false&allowPublicKeyRetrieval=true
+    username: admin
+    password: Manikanta
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
