--- a/DoctorService-prod.yml
+++ b/DoctorService-prod.yml
@@ -9,8 +9,8 @@ spring:
 
   datasource:
     url: jdbc:mysql://online-doc-appnt-db.c1eeu604q8hf.us-east-1.rds.amazonaws.com:3306/prod_doc_appointment_doctor_service?useSSL=false&allowPublicKeyRetrieval=true
-    username: root
-    password: root
+    username: admin
+    password: Manikanta
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
