--- a/AuthService-prod.yml
+++ b/AuthService-prod.yml
@@ -4,7 +4,7 @@ jwt:
 eureka:
   client:
     service-url:
-      defaultZone: http://13.221.235.248:8761/eureka
+      defaultZone: http://localhost:8761/eureka
 
 spring:
   application:
@@ -12,10 +12,10 @@ spring:
   profiles:
     active: default
   config:
-    import: "optional:configserver:http://13.221.235.248:8888"
+    import: "optional:configserver:localhost:8888"
 
   datasource:
-    url: jdbc:mysql://online-doc-appnt-db.c1eeu604q8hf.us-east-1.rds.amazonaws.com:3306/prod_doc_appointment_user_service?useSSL=false&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://my-app-db.c1eeu604q8hf.us-east-1.rds.amazonaws.com:3306/prod_doc_appointment_user_service?useSSL=false&allowPublicKeyRetrieval=true
     username: admin
     password: Manikanta
     driver-class-name: com.mysql.cj.jdbc.Driver
