--- a/UserService-prod.yml
+++ b/UserService-prod.yml
@@ -1,7 +1,7 @@
 eureka:
   client:
     service-url:
-      defaultZone: http://13.221.235.248:8761/eureka
+      defaultZone: http://localhost:8761/eureka
 
 spring:
   application:
@@ -9,7 +9,7 @@ spring:
   profiles:
     active: default
   config:
-    import: "optional:configserver:http://13.221.235.248:8888"
+    import: "optional:configserver:http://localhost:8888"
 
 management:
   tracing:
@@ -23,9 +23,9 @@ logging:
 
 
   datasource:
-    url: jdbc:mysql://online-doc-appnt-db.c1eeu604q8hf.us-east-1.rds.amazonaws.com:3306/prod_doc_appointment_user_service?useSSL=false&allowPublicKeyRetrieval=true
-    username: root
-    password: root
+    url: jdbc:mysql://my-app-db.c1eeu604q8hf.us-east-1.rds.amazonaws.com:3306/prod_doc_appointment_user_service?useSSL=false&allowPublicKeyRetrieval=true
+    username: admin
+    password: Manikanta
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
