--- a/auth-service-prod.yml
+++ b/auth-service-prod.yml
@@ -4,7 +4,7 @@ jwt:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://54.210.172.49:8761/eureka
 
 spring:
   application:
@@ -12,7 +12,7 @@ spring:
   profiles:
     active: default
   config:
-    import: "optional:configserver:localhost:8888"
+    import: "optional:configserver:54.210.172.49:8888"
 
   datasource:
     url: jdbc:mysql://my-app-db.c1eeu604q8hf.us-east-1.rds.amazonaws.com:3306/prod_doc_appointment_user_service?useSSL=false&allowPublicKeyRetrieval=true
