--- a/auth-service-prod.yml
+++ b/auth-service-prod.yml
@@ -4,7 +4,7 @@ jwt:
 eureka:
   client:
     service-url:
-      defaultZone: http://54.210.172.49:8761/eureka
+      defaultZone: http://52.55.6.208/:8761/eureka
 
 spring:
   application:
